public/css/styles.css
.chat-messages{overflow:scroll;overflow-x:hidden;overflow-y:hidden;height:440px;}
.chat-messages.scroll{box-shadow:inset 0 -2px 2px rgba(0,0,0,0.2);}
.chat-messages:hover{overflow-y:scroll;}
.chat-messages ul{margin:0;padding:0;list-style:none;}
.chat-messages ul li{padding:10px;border-bottom:dotted 1px #eee;margin-left:7px}
.chat-messages ul li .sender{font-size:12px;font-weight:bold;margin-right:7px;}
.chat-messages ul li .text{font-size:12px;color:#4d4d4d;}
.chat-messages ul li .time{color:#999;font-size:8px; float:right;} 
.chat-messages ul li.marker .sender{color:#39a64e;}
.chat-clients ul{overflow:scroll;overflow-x:hidden;overflow-y:hidden;list-style:none;}
.chat-clients ul:hover{overflow-y:scroll;}
.chat-clients ul li.me{font-weight:bold;color:#39a64e;}
.fl{float:left;display:inline-block;}


.audio-red {
  color: #FF0000;
  padding-right: 14px;
}
.audio-green{
  color: #62c462;
}
.red a {
  color:#333;
}
.red .active a,
.red .active a:hover {
    color: #FF0000;
    background-color: #FFF;
}
.home-hero {
  margin-top: -18px;
}
@media (min-width: 1200px) {
  body {
    padding-top:43px;
  }
}
@media (min-width: 980px) and (max-width: 1199px) {
  body {
    padding-top:43px;
  }
}
@media (min-width: 768px) and (max-width: 979px) {
  body {
    padding-top:0px;
  }
}
@media (min-width: 481px) and (max-width: 767px) {
  body {
    padding-top:0px;
  }
}
@media (max-width: 480px) {
   body {
    padding-top:0px;
    
  }
}
@media (max-width: 979px) {
   .navbar-fixed-top .navbar-inner,
  .navbar-fixed-bottom .navbar-inner {
    padding: 0px;
    margin: 0px;
    z-index: 0;
  }
  .navbar .navbar-inverse .navbar-fixed-top{
    padding: 0px;
    margin: 0px;
    z-index: 0;
  }
  .bottomHeader{
    margin-top: -20px;
  }
  .home-hero {
    margin-top: 40px;
  }
}


.chat-display {
  overflow:scroll;
  overflow-x:hidden;
  overflow-y:hidden;
  height: 300px;
  border: solid 1px #ddd;
}
.chat-display.scroll{box-shadow:inset 0 -2px 2px rgba(0,0,0,0.2);}
.chat-display:hover{overflow-y:scroll;}
.breakword {
  word-wrap: break-word;
}
.truncate {
  white-space: nowrap;
  width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
}
.brand {
    font-family: 'Quantico';
}

.timer {
  width: 100%;
  font-family: 'Quantico';
  font-size: 36px;
}

a.plain:link {
    text-decoration: none;
}

a.plain:active {
    text-decoration: none;
}

a.plain:visited {
    text-decoration: none;
}

a.plain:hover {
    text-decoration: none;
}

.status-bar {
    height: 60px;
}

.about-icon {
    float: left;
    margin-right: 12px;
}

.footer {
    margin-top: 30px;
    padding-top: 10px;
    color: #999;
    border-top: solid 1px #ddd;
}

.footer > p {
    padding-top: 4px !important;
    padding-bottom: 4px !important;
}

h5 {
    width: 100%;
    white-space: nowrap;
    margin-bottom: 4px;
}

.thumbnail {
   min-width: 200px;  
}
/*
.thumbnails li {
    margin-left: 0px !important;
    margin-right: 20px !important;
}
*/
.thumbnail > img {
  height:150px;
}

legend {
    font-family: quantico;
}

.home-hero {
    height: 100%;
    font-family: quantico;
    font-size: 36;
    color: #FFF;
    max-width: 800px;
    text-align: center;
   /*background-image: url('img/bg.png');
    background-size: cover;
    background-repeat: no-repeat;
    margin-top: -21px;
    padding: 10px 20px 660px 20px;
    text-align : center;
    text-shadow: 1px 1px 1px #000;*/
}

@media only screen and ( max-width : 1000px ) {
    .home-hero {
        padding:5px 5px 1000px 5px;
    }
}

@media only screen and ( max-width : 480px ) {
    .home-hero {
        padding:5px 5px 480px 5px;
    }
}


.home-hero .btn {
    font-family: "quantico";
    width: 160px;
    margin: 10px 4px;
}

/* Social proof buttons from GitHub & Twitter */
.bs-docs-social {
    padding: 15px 0;
    text-align: center;
    background-color: #f5f5f5;
    border-top: 1px solid #fff;
    border-bottom: 1px solid #ddd;
}

/* Quick links on Home */
.bs-docs-social-buttons {
    margin-left: 0;
    margin-bottom: 0;
    padding-left: 0;
    list-style: none;
}

.bs-docs-social-buttons li {
    display: inline-block;
    padding: 0px 0px;
    line-height: 1;
    *display: inline;
    *zoom: 1;
}

.well h3 {
    margin-top: 0px;
    margin-bottom: 0px;
}
#chat,
#nickname,
#messages {
  width: 950px;
}
#chat {
  position: relative;
  border: 1px solid #ccc;
}
#nickname,
#connecting {
  position: absolute;
  height: 410px;
  z-index: 100;
  left: 0;
  top: 0;
  background: #fff;
  text-align: center;
  width: 950px;
  font: 15px Georgia;
  color: #666;
  display: block;
}
#nickname .wrap,
#connecting .wrap {
  padding-top: 150px;
}
#nickname input {
  border: 1px solid #ccc;
  padding: 10px;
}
#nickname input:focus {
  border-color: #999;
  outline: 0;
}
#nickname #nickname-err {
  color: #8b0000;
  font-size: 12px;
  visibility: hidden;
}
.connected #connecting {
  display: none;
}
.nickname-set #nickname {
  display: none;
}
#messages {
  height: 380px;
  background: #eee;
}
#messages em {
  text-shadow: 0 1px 0 #fff;
  color: #999;
}
#messages p {
  padding: 0;
  margin: 0;
  font: 12px Helvetica, Arial;
  padding: 5px 10px;
}
#messages p b {
  display: inline-block;
  padding-right: 10px;
}
#messages p:nth-child(even) {
  background: #fafafa;
}
#messages #nicknames {
  background: #ccc;
  padding: 2px 4px 4px;
  font: 11px Helvetica;
}
#messages #nicknames span {
  color: #000;
}
#messages #nicknames b {
  display: inline-block;
  color: #fff;
  background: #999;
  padding: 3px 6px;
  margin-right: 5px;
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  border-radius: 10px;
  text-shadow: 0 1px 0 #666;
}
#messages #lines {
  height: 355px;
  overflow: auto;
  overflow-x: hidden;
  overflow-y: auto;
}
#messages #lines::-webkit-scrollbar {
  width: 6px;
  height: 6px;
}
#messages #lines::-webkit-scrollbar-button:start:decrement,
#messages #lines ::-webkit-scrollbar-button:end:increment {
  display: block;
  height: 10px;
}
#messages #lines::-webkit-scrollbar-button:vertical:increment {
  background-color: #fff;
}
#messages #lines::-webkit-scrollbar-track-piece {
  background-color: #fff;
  -webkit-border-radius: 3px;
}
#messages #lines::-webkit-scrollbar-thumb:vertical {
  height: 50px;
  background-color: #ccc;
  -webkit-border-radius: 3px;
}
#messages #lines::-webkit-scrollbar-thumb:horizontal {
  width: 50px;
  background-color: #fff;
  -webkit-border-radius: 3px;
}
#send-message {
  background: #fff;
  position: relative;
}
#send-message input {
  border: none;
  height: 30px;
  padding: 0 10px;
  line-height: 30px;
  vertical-align: middle;
  width: 580px;
}
#send-message input:focus {
  outline: 0;
}
#send-message button {
  position: absolute;
  top: 5px;
  right: 5px;
}
button {
  margin: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  user-select: none;
  display: inline-block;
  text-decoration: none;
  background: #43a1f7;
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #43a1f7), color-stop(1, #377ad0));
  background: -webkit-linear-gradient(top, #43a1f7 0%, #377ad0 100%);
  background: -moz-linear-gradient(top, #43a1f7 0%, #377ad0 100%);
  background: linear-gradient(top, #43a1f7 0%, #377ad0 100%);
  border: 1px solid #2e70c4;
  -webkit-border-radius: 16px;
  -moz-border-radius: 16px;
  border-radius: 16px;
  color: #fff;
  font-family: "lucida grande", sans-serif;
  font-size: 11px;
  font-weight: normal;
  line-height: 1;
  padding: 3px 10px 5px 10px;
  text-align: center;
  text-shadow: 0 -1px 1px #2d6dc0;
}
button:hover,
button.hover {
  background: darker;
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #43a1f7), color-stop(1, #2e70c4));
  background: -webkit-linear-gradient(top, #43a1f7 0%, #2e70c4 100%);
  background: -moz-linear-gradient(top, #43a1f7 0%, #2e70c4 100%);
  background: linear-gradient(top, #43a1f7 0%, #2e70c4 100%);
  border: 1px solid #2e70c4;
  cursor: pointer;
  text-shadow: 0 -1px 1px #2c6bbb;
}
button:active,
button.active {
  background: #2e70c4;
  border: 1px solid #2e70c4;
  border-bottom: 1px solid #2861aa;
  text-shadow: 0 -1px 1px #2b67b5;
}
button:focus,
button.focus {
  outline: none;
  -webkit-box-shadow: 0 1px 0 0 rgba(255,255,255,0.40), 0 0 4px 0 #377ad0;
  -moz-box-shadow: 0 1px 0 0 rgba(255,255,255,0.40), 0 0 4px 0 #377ad0;
  box-shadow: 0 1px 0 0 rgba(255,255,255,0.40), 0 0 4px 0 #377ad0;
}

